Fix message :before and :after having gaps

--- a/material-dark/source.css
+++ b/material-dark/source.css
@@ -170,7 +170,7 @@
     position: relative;
     width: 0;
     height: 0;
-    top: calc(18px / 1.1 * -1);
+    top: calc(18px / 1.15 * -1);
     background-color: transparent;
     border: calc(18px / 2.275) solid transparent;
     border-bottom-color: var(--messagebgcolor);
